Fixes minor spacing issues and other bugs.

--- a/src/sass/partials/_index.scss
+++ b/src/sass/partials/_index.scss
@@ -10,8 +10,8 @@
 }
 .teaser-module-head	{
 	font-family:$sans;
-	font-size:em(20);
-	border-bottom:rem(1) solid $light;
+	font-size:em(24);
+	border-bottom:1px solid $light;
 	font-weight:800;
 	margin:0 0 0 0;
 	padding:0 0 rem(2) 0;
@@ -28,10 +28,23 @@
 	}
 	@media screen and (prefers-color-scheme: dark) {
 		color:$light-aqua;
-		border-bottom:rem(1) solid $dark;
+		border-bottom:1px solid $dark;
 	} 
 	@media screen and (max-width:rem(500)) {
         font-size: rem(18);
+    }	
+}
+.teaser-module-subhead	{
+	font-family:$sans;
+	font-size:em(16);
+	font-weight:800;
+	margin:0 0 12px 0;
+	padding:0;
+	@media screen and (prefers-color-scheme: dark) {
+		color:white;
+	} 
+	@media screen and (max-width:rem(500)) {
+        font-size: rem(14);
     }	
 }
 .teaser-module-abstract {
@@ -107,6 +120,12 @@
 			}
 		}
 }
+.teaser-module-mainart.med-photo-overlay:after {
+	@media screen and (max-width:em(750)) {
+		padding-bottom: 59.9%;
+	}
+}
+
 .med-photo-overlay {
 	&::after {
 		position:absolute;
